appId: compose.project.click.click
tags:
  - subflow
---
- tapOn:
    id: "login-email"
- inputText: ${TEST_EMAIL}
- tapOn:
    id: "login-password"
- inputText: ${TEST_PASSWORD}
- hideKeyboard
- tapOn:
    id: "login-submit"
